# amplifier-module-provider-github-copilot

./: .gitignore  MIGRATION.md  Makefile  README.md  coverage.json  pyproject.toml
amplifier_module_provider_github_copilot/: __init__.py  _compat.py  _identity.py  _permissions.py  _platform.py  client.py  config_loader.py  converters.py  error_translation.py  event_router.py  fake_tool_detection.py  model_cache.py  models.py  observability.py  provider.py  request_adapter.py  streaming.py  tool_capture.py
amplifier_module_provider_github_copilot/config/: __init__.py  _models.py  _paths.py  _policy.py  _sdk_protection.py  events.yaml  retry.yaml
amplifier_module_provider_github_copilot/config/data/: __init__.py  events.yaml
amplifier_module_provider_github_copilot/sdk_adapter/: __init__.py  _imports.py  client.py  event_helpers.py  model_translation.py  types.py
contracts/: behaviors.md  deny-destroy.md  error-hierarchy.md  event-vocabulary.md  filesystem-layout.md  observability.md  provider-protocol.md  sdk-boundary.md  streaming-contract.md
docs/: ARCHITECTURE.md  amp-dev-auto-validations.md
scripts/: smoke_test.py
tests/: _sdk_version_gate.py  conftest.py  test_behaviors.py  test_bug_fixes.py  test_client_coverage.py  test_client_lifecycle.py  test_concurrent_sessions.py  test_config_driven_timeout.py  test_config_loading.py  test_context_tier.py  test_contract_deny_destroy.py  test_contract_events.py  test_contract_streaming.py  test_converters.py  test_cross_platform.py  test_deny_destroy_permission.py  test_entry_point.py  test_error_mappings.py  test_error_translation.py  test_error_types.py  test_event_classification_overlap.py  test_event_classifications.py  test_failed_start_cleanup.py  test_filesystem_acceptance_live.py  test_filesystem_cache_wiring.py  test_filesystem_isolation.py  test_filesystem_lifecycle.py  test_filesystem_paths.py  test_filesystem_subprocess_env.py  test_hooks_emission.py  test_live_smoke.py  test_model_cache.py  test_models.py  test_mount.py  test_mount_coverage.py  test_observability.py  test_permission_handler.py  test_permissions.py  test_platform.py  test_provider_branches.py  (+24 more)
tests/fixtures/: sdk_mocks.py
tests/integration/: test_amplifier_user_entry_point_acceptance.py  test_forensic_regression.py  test_multi_model_saturation.py
typings/amplifier_core/: __init__.pyi  llm_errors.pyi  message_models.pyi
typings/copilot/: __init__.pyi  client.pyi  session.pyi  types.pyi
