[project]
name = "amplifier-module-provider-github-copilot"
version = "2.4.0"
description = "GitHub Copilot provider for Amplifier - Two-Medium Architecture"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Amplifier Team", email = "amplifier@microsoft.com"}
]
keywords = ["amplifier", "github-copilot", "llm", "provider", "ai", "language-model"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    # GitHub Copilot SDK
    # - v1.0.0b7: SubprocessConfig removed; CopilotClient takes direct kwargs
    # - v1.0.0b9: on_list_models + mode kwargs (additive)
    # - v1.0.0b10: 8 new create_session kwargs + telemetry consolidation
    #   (MinimalMode:MUST:7-15)
    # - v1.0.0b12: bundled CLI 1.0.57; copilot.rpc stable public shim;
    #   one new SessionEventType (session.extensions.attachments_pushed)
    # - v1.0.0 (GA): byte-identical Python source to b12 (bundled CLI 1.0.57);
    #   stable release stamp — no API or behavior change vs b12
    # - v1.0.1 / v1.0.2: NON-BREAKING for our 4 SDK imports — top-level `copilot`
    #   exports `ModelCapabilitiesOverride`, `ModelLimitsOverride`,
    #   `PermissionRequestResult`; `PermissionDecisionReject` lives in
    #   `copilot.generated.rpc` (guarded boundary carve-out, ImportQuarantine:MUST:7).
    #   None were removed or renamed across GA -> 1.0.1 -> 1.0.2.
    #   v1.0.2 adds graceful runtime shutdown on CopilotClient.stop() (bounded by
    #   _RUNTIME_SHUTDOWN_TIMEOUT_SECONDS) — lands on the once-per-lifecycle close()
    #   path, not the per-turn session disconnect path.
    "github-copilot-sdk==1.0.2",
    # PyYAML for config loading
    "pyyaml>=6.0",
    # PEP 440 version parser used by the import-time SDK floor check
    # (`amplifier_module_provider_github_copilot.__init__._check_sdk_version`).
    # `packaging` is PyPA-maintained; declared explicitly because the
    # top-level `packaging` module is not guaranteed present in a minimal
    # venv (pip vendors it internally as `pip._vendor.packaging`, which
    # the top-level import cannot resolve).
    "packaging>=20",
    # Note: amplifier-core is provided by Amplifier runtime when module is loaded
    # Listed here for type hints only; not installed at runtime
]

[project.urls]
Homepage = "https://github.com/microsoft/amplifier-module-provider-github-copilot"
Repository = "https://github.com/microsoft/amplifier-module-provider-github-copilot"
Documentation = "https://github.com/microsoft/amplifier-module-provider-github-copilot#readme"

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "pyright>=1.1.350",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.21",
    "pytest-cov>=7.0.0",
    # amplifier-core from PyPI (binary wheels, no Rust compilation needed)
    # Floor bumped from 1.0.7 → 1.3.0 to align with the runtime version actually
    # injected by the Amplifier CLI (1.4.x). The 1.0.7 floor predated several
    # kernel iterations and was no longer representative of the tested surface.
    # Note: amplifier-core public message_models are byte-identical across
    # 1.2.6→1.4.1; the bump reflects policy alignment, not new field usage.
    "amplifier-core>=1.3.0",
]

[project.entry-points."amplifier.modules"]
provider-github-copilot = "amplifier_module_provider_github_copilot:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_provider_github_copilot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
]

# Type checking (pyright) is configured in the standalone `pyrightconfig.json`
# at the repo root — REQUIRED by the QualityGates tests
# (tests/test_test_quality.py::TestQualityGates) and used by `make pyright`.
# pyright honors pyrightconfig.json over [tool.pyright], so the config lives
# there as the single source of truth to avoid silent drift between the two.

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
# Live tests excluded by default (CI-friendly) - run with: pytest -m live
# Or run all tests with: pytest -m ""
# Contract: tests run and FAIL if credentials missing, never skip
addopts = "-m 'not live'"
markers = [
    "live: marks tests requiring real credentials (run explicitly with -m live)",
    "sdk_assumption: marks tests verifying SDK types/shapes exist",
    "security: marks tests verifying security invariants (injection, redaction, sanitization)",
]

# Note: [dependency-groups] removed — use [project.optional-dependencies] dev instead
# The pytest-cov dependency has been consolidated into [project.optional-dependencies] dev
